change endpoint name
